--- a/MLP_AI_Runfile.ipynb
+++ b/MLP_AI_Runfile.ipynb
@@ -14,6 +14,7 @@
         "S3McAkVV_bbD",
         "Kk_2SY_xVtok"
       ],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyOaS2zMjhDQP1uBLp5F9i85",
       "include_colab_link": true
     },
